<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/CustomLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style='@style/StartTextViewStyle'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            style="@style/CustomButtonStyle"
            android:id="@+id/start_join_game_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/start_join_game"
            app:layout_constraintBottom_toTopOf="@+id/start_host_game_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/start_host_game_btn"
            style="@style/CustomButtonStyle"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_host_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_join_game_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>