<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".JoinFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/CustomLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/join_name_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/bitte_namen_eingeben"
            android:inputType="textPersonName"
            android:text="@={viewModel.nameFromPlayer}"
            app:layout_constraintBottom_toTopOf="@+id/join_game_id_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/join_game_id_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Bitte Spiel ID eingeben..."
            android:inputType="textPersonName"
            android:text="@={viewModel.gameID}"

            app:layout_constraintBottom_toTopOf="@+id/recyclerViewJoinGames"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_name_editText" />

        <Button
            android:id="@+id/join_join_btn"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/join_join"
            app:layout_constraintBottom_toTopOf="@+id/join_cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewJoinGames"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/join_cancel_btn"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/join_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_join_btn" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewJoinGames"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_game_id_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="viewModel"
            type="de.hsfl.team34.capturetheflag.MainViewModel" />
        <variable
            name="DataConverter"
            type="de.hsfl.team34.capturetheflag.DataBindingConverter" />
    </data>

</layout>